--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
+MONGODB_URI="mongodb+srv://mh_db_user:Ewc4kcG8KA3Ciih4@cluster7.i3akwjx.mongodb.net/?appName=Cluster7"
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/my_database
